force-app/main/default/objects/Provisioning__c/Provisioning__c.object-meta.xml
<CustomObject>
    <description>This object is part of DI project</description>
    <label>Provisioning</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Provisioning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>