force-app/main/default/objects/Provisioning__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation used to filter the Primary and Secondary contact to just the Account this Opp/Quote is for</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provisioning</relationshipLabel>
    <relationshipName>Provisioning</relationshipName>
    <type>Lookup</type>
</CustomField>