force-app/main/default/objects/Provisioning__c/fields/Existing_Domain__c.field-meta.xml
<CustomField>
    <fullName>Existing_Domain__c</fullName>
    <label>Existing Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>