force-app/main/default/objects/Provisioning__c/fields/PrimaryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactEmail__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>