force-app/main/default/objects/Provisioning__c/fields/SecondaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SecondaryContactPhone__c</fullName>
    <formula>Secondary_Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>